--- a/index.html
+++ b/index.html
@@ -364,9 +364,9 @@
                                         data-aos-offset="0">Developer</span>
                                     <p data-aos="fade-up" data-aos-delay="600" data-aos-duration="600"
                                         data-aos-offset="0">Programador da linguagem javascript e python à 5 anos e desenvolvedor 
-                                        na linguagem html5 e css3 em média de 3 anos, conta com uma excepcional experiencia de carreira na programação, 
-                                        tendo criado projetos em diversas areas da internet sendo um deles a criação de um nomeado de "RealExtremeRP"  
-                                        muito famoso na comunidade FiveM. <br>
+                                        na linguagem html5 e css3 em média de 3 anos, conta com uma excepcional experiência de carreira na programação, 
+                                        tendo colaborado com diversos programadores em áreas distintas da internet sendo um deles, sendo também o criador de um famoso 
+                                        projeto na comunidade FiveM nomeado de "RealXtremeRP".
                                         Este profissional é quem será responsável por desenvolver e programar seu website de acordo com as estratégias 
                                         de marketing traçadas por nossa equipe.</p>
                                 </div>
