--- a/index.html
+++ b/index.html
@@ -363,16 +363,16 @@
                                     <span data-aos="fade-up" data-aos-delay="400" data-aos-duration="600"
                                         data-aos-offset="0">Developer</span>
                                     <p data-aos="fade-up" data-aos-delay="600" data-aos-duration="600"
-                                        data-aos-offset="0">Programador da linguagem javascript e python à 5 anos e desenvolvedor 
+                                        data-aos-offset="0">Programador da linguagem javascript e python à 7 anos e desenvolvedor 
                                         na linguagem html5 e css3 em média de 3 anos, conta com uma excepcional experiência de carreira na programação, 
                                         tendo colaborado com diversos programadores em áreas distintas da internet, sendo também o criador de um famoso 
-                                        projeto na comunidade FiveM nomeado de "RealXtremeRP".
+                                        projeto na comunidade FiveM nomeado de "RealXtremeRP". <br>
                                         Este profissional é quem será responsável por desenvolver e programar seu website de acordo com as estratégias 
                                         de marketing traçadas por nossa equipe.</p>
                                 </div>
                             </div>
                         </div>
-                        
+
                         <div class="swiper-slide text-center">
                             <div class="row">
                                 <div class="offset-lg-1 col-lg-10">
@@ -430,10 +430,10 @@
                                 </div>
                             </div>
                             <div class="media">
-                                <i class="fa fa-fax"></i>
+                                <i class="fa fa-whatsapp"></i>
                                 <div class="media-body ml-3">
-                                    <h6>Fax</h6>
-                                    <a href="fax:911889047521432">(91) 188904752 1432</a>
+                                    <h6>Whatsapp</h6>
+                                    <a href="https://api.whatsapp.com/send?phone=5565999769014">(65) 9 9976-9014</a>
                                 </div>
                             </div>
                         </div>
@@ -445,7 +445,8 @@
                     <div>
                         <div id="map" class="title" >
                             <h6 class="title-primary" >Onde estamos</h6>
-                            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13302.138932848899!2d-58.11664368630447!3d-15.24104737815837!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9399eeedd938b93f%3A0xa0bc6d833db803f4!2sRio%20Branco%2C%20MT%2C%2078275-000!5e1!3m2!1spt-BR!2sbr!4v1677623776217!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d9314.416132823448!2d-58.10850768080486!3d-15.239454369046792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1spt-BR!2sbr!4v1677658619731!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            
                         </div>
                 <!--    </div>
 
