--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
                 <div class="contact">
                     <a href="tel:+5565981094064" class="tel"><i class="fa fa-phone" aria-hidden="true"></i>(65) 9 8109-4064</a>
                     <a href="mailto:A7@company.com"><i class="fa fa-envelope"
-                            aria-hidden="true"></i>A7@company.com</a>
+                            aria-hidden="true"></i>company@a7digital.site</a>
                 </div>
                 <nav class="d-flex aic">
                     <!-- <a href="#" class="login"><i class="fa fa-user" aria-hidden="true"></i>Login</a> -->
                     <ul class="nav social d-none d-md-flex">
                         <li><a href="https://www.facebook.com/judsonradslley" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://api.whatsapp.com/send?phone=5565999769014" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+                  <!--<li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
                         <li><a href="https://www.instagram.com/jackson_alvesassis/" target="_blank"><i class="fa fa-instagram"></i></a></li>
                     </ul>
                 </nav>
@@ -419,7 +419,7 @@
                                 <i class="fa fa-envelope-o"></i>
                                 <div class="media-body ml-3">
                                     <h6>E-mail</h6>
-                                    <a href="mailto:judsonradslley@gmail.com">judsonradslley@gmail.com</a>
+                                    <a href="mailto:company@a7digital.site">company@a7digital.site</a>
                                 </div>
                             </div>
                             <div class="media">
